# Dive in and do what these dirs tell you.
SUBDIRS    = doc man src

# Stuff that would otherwise not be distributed.
# .lsm:  Linux Software Map - http://lsm.execpc.com/lsm/
# .spec: RedHat Package Manager template
# debian/ Debian maintainer scripts for building .deb, .dsc etc.
EXTRA_DIST = gul.lsm.in gul.spec.in \
             BUGS \
             IDEAS \
	    TIPS

#  if you write a self-test script named `chk', uncomment the
#  following and add `chk' to the EXTRA_DIST list
#TESTS=chk
