bin_PROGRAMS = gul

# gul_SOURCES=gul.c xmalloc.c system.h aclocal.m4 gul.1
#              ncurses.c    ../include/ncurses.h     \
#              dll.c        ../include/dll.h         \
#              vt100.c      ../include/vt100.h
gul_SOURCES =              ../include/config.h      \
                           ../include/editor.h      \
                           ../include/help.h        \
                           ../include/system.h      \
              main.c       ../include/gul.h         \
              display.c    ../include/display.h     \
              buffer_gap.c ../include/buffer_gap.h  \
	      fileio.c     ../include/fileio.h      \
              keyboard.c   ../include/keyboard.h    \
              memory.c     ../include/memory.h      \
              error.c                               \
              misc.c       ../include/misc.h        \
              plugin.c     ../include/plugin.h      \
              slang.c      ../include/slang.h

#gul_LDADD   = -lncurses
