bin_PROGRAMS = gul

# 		dll.c        ../include/dll.h         \
# 		vt100.c      ../include/vt100.h
gul_SOURCES =		   ../include/config.h	    \
			   ../include/editor.h	    \
			   ../include/help.h	    \
	      main.c	   ../include/gul.h	    \
	      display.c	   ../include/display.h	    \
	      buffer_gap.c ../include/buffer_gap.h  \
	      fileio.c	   ../include/fileio.h	    \
	      keyboard.c   ../include/keyboard.h    \
	      error.c				    \
	      misc.c	   ../include/misc.h	    \
	      plugin.c	   ../include/plugin.h	    \
	      ncurses.c	   ../include/ncurses.h

#gul_LDADD   = -lncurses
